S8-Exception Handling with Spring Boot
Lesson 90
Exception handler with @ResponseStatus annotation
Using Java Optional